P56 feat: 增加C端登录用户添加图片标签
